tests/errors/source/substitute_item_with_duplicate_4.rs
use duplicate::*;
// Test that substitute macros require at least one global substitution
#[substitute_item(
)]//duplicate_end
pub struct name(ty);
//item_end
